--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -1073,15 +1073,14 @@
                                 <rect key="frame" x="20" y="20" width="94" height="37"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.8036167622" green="0.0" blue="0.018651708959999999" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Apple Map">
+                                <state key="normal" title="Apple">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="heightClass=regular-widthClass=regular" fixedFrame="YES">
-                                    <rect key="frame" x="910" y="20" width="94" height="37"/>
+                                    <rect key="frame" x="851" y="20" width="153" height="37"/>
                                 </variation>
                                 <connections>
                                     <action selector="loadAppleMap" destination="aH8-aO-6yG" eventType="touchUpInside" id="O3c-NE-uCH"/>
-                                    <action selector="tapSummaryButton:" destination="ejP-5U-I7s" eventType="touchUpInside" id="YDF-ZF-HQs"/>
                                 </connections>
                             </button>
                         </subviews>
